[gd_scene load_steps=12 format=1]

[ext_resource path="res://Coin.gd" type="Script" id=1]
[ext_resource path="res://QPF_assets/art/Hadamard_black_2.png" type="Texture" id=2]
[ext_resource path="res://QPF_assets/art/Black_Circle.png" type="Texture" id=3]
[ext_resource path="res://QPF_assets/art/Hadamard_white_2.png" type="Texture" id=4]
[ext_resource path="res://QPF_assets/art/Hadamard_white_1.png" type="Texture" id=5]
[ext_resource path="res://QPF_assets/art/White_Circle.png" type="Texture" id=6]
[ext_resource path="res://QPF_assets/art/Hadamard_black_1.png" type="Texture" id=7]
[ext_resource path="res://QPF_assets/music/flip.ogg" type="AudioStream" id=8]
[ext_resource path="res://QPF_assets/music/tutorialBad.opus" type="AudioStream" id=9]

[sub_resource type="CircleShape2D" id=1]

custom_solver_bias = 0.0
radius = 65.235

[sub_resource type="SpriteFrames" id=2]

animations = [ {
"frames": [ ExtResource( 2 ) ],
"loop": false,
"name": "hadamard_black_2",
"speed": 0.0
}, {
"frames": [ ExtResource( 3 ) ],
"loop": false,
"name": "black",
"speed": 0.0
}, {
"frames": [ ExtResource( 4 ) ],
"loop": false,
"name": "hadamard_white_2",
"speed": 0.0
}, {
"frames": [ ExtResource( 5 ) ],
"loop": false,
"name": "hadamard_white_1",
"speed": 5.0
}, {
"frames": [ ExtResource( 6 ) ],
"loop": false,
"name": "white",
"speed": 5.0
}, {
"frames": [ ExtResource( 7 ) ],
"loop": false,
"name": "hadamard_black_1",
"speed": 5.0
} ]

[node name="Coin" type="RigidBody2D" groups=[
"Coins",
]]

transform/pos = Vector2( 0.540344, 2 )
input/pickable = true
shapes/0/shape = SubResource( 1 )
shapes/0/transform = Matrix32( 1, 0, 0, 1, 0, 0 )
shapes/0/trigger = false
collision/layers = 1
collision/mask = 0
mode = 0
mass = 1.0
friction = 1.0
bounce = 0.0
gravity_scale = 0.0
custom_integrator = false
continuous_cd = 0
contacts_reported = 0
contact_monitor = false
sleeping = false
can_sleep = true
velocity/linear = Vector2( 0, 0 )
velocity/angular = 0.0
damp_override/linear = -1.0
damp_override/angular = -1.0
script/script = ExtResource( 1 )
__meta__ = {
"_edit_group_": true
}
min_speed = 250
max_speed = 350

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]

transform/rot = 89.9751
transform/scale = Vector2( 0.2, 0.2 )
z/z = -20
frames = SubResource( 2 )
animation = "hadamard_black_1"

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]

shape = SubResource( 1 )
trigger = false
_update_shape_index = 0

[node name="Visibility" type="VisibilityNotifier2D" parent="."]

visibility/visible = false
transform/pos = Vector2( 0.242675, 0.487833 )
transform/scale = Vector2( 5.14913, 5.209 )
rect = Rect2( -10, -10, 20, 20 )

[node name="TimerCPUFlips" type="Timer" parent="."]

process_mode = 1
wait_time = 1.0
one_shot = false
autostart = false

[node name="FlipSound" type="StreamPlayer" parent="."]

stream/stream = ExtResource( 8 )
stream/play = false
stream/loop = false
stream/volume_db = -8.0
stream/autoplay = false
stream/paused = false
stream/loop_restart_time = 0.0
stream/buffering_ms = 500

[node name="LiveLosedSound" type="StreamPlayer" parent="."]

stream/stream = ExtResource( 9 )
stream/play = false
stream/loop = false
stream/volume_db = 15.0
stream/autoplay = false
stream/paused = false
stream/loop_restart_time = 0.0
stream/buffering_ms = 500

[connection signal="exit_screen" from="Visibility" to="." method="_on_Visibility_exit_screen"]


